# Ceres_g2o_optimization

./: .gitignore  CMakeLists.txt  README.md
dataset/: optimized_2d.g2o
docker_g2o/: Dockerfile  optimized_result.g2o
include/: Constraints.h  LoadData.h  PoseGraphOptimization.h  Poses.h
src/: Constraints.cpp  LoadData.cpp  OptimizerG2O.cpp  PoseGraphOptimization.cpp  Poses.cpp  main.cpp
